修改系统启动延时时间，以及修改.env文件的修改要求

--- a/.env
+++ b/.env
@@ -1,20 +1,22 @@
 # ================= 用户基本信息 =================
 # 你的BiliBili账号，例如：123456789
-my_user_id=your_bilibili_id
+my_user_id=123456789
 
 # ================= 数据库配置信息 =================
-PORT=3308
+PORT=3310
 MYSQL_DATABASE=bilibili
 MYSQL_USER=your_user_name
-MYSQL_PASSWORD=your_user_password
-MYSQL_ROOT_PASSWORD=your_root_password
-db_host=127.0.0.1
+MYSQL_PASSWORD=user_passwd
+MYSQL_ROOT_PASSWORD=root_passwd
+DB_HOST=192.168.68.244
 
 # ================= 其他基本配置信息 =================
 # 初筛配置的阈值
 check_ok_draw_time=2
+# 延迟启动时间，这里默认120s，防止selenium还没启动完成程序就开始运行，如果机器资源比较差，可以适当增加延迟时间
+delay_time=120
 # 检查当前是否登录，最多5分钟
 max_checks=300
 home_url=https://www.bilibili.com/
-selenium_url=http://127.0.0.1:5555
+selenium_url=http://192.168.68.244:5555
 
