update the file

--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ ups=你的工具人老公|_大锦鲤_|Carcinus_|闻不着味
 # ================= selenium驱动配置 =================
 selenium_url=http://127.0.0.1:5555
 # chromedriver版本：Online 或 Local
-DRIVER_VERSION=Local
+DRIVER_VERSION=Online
 # =================================================================
 
 # =========================== 可选配置信息 ===========================
