--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # ================= 必填配置信息 =================
 cookie_value=填入从网页获取的cookie值
+DB_HOST=运行本项目的IP
 
 # =========================== 固定配置信息 ===========================
 my_user_id=test_id
@@ -17,7 +18,6 @@ MYSQL_DATABASE=luckybili
 MYSQL_USER=luckybili
 MYSQL_PASSWORD=luckybililuckybili
 MYSQL_ROOT_PASSWORD=luckybililuckybili
-DB_HOST=
 
 # ================= 转发自定义信息 =================
 share_content=一位支持你的粉丝正在抽奖|支持|抽奖啦!|顶!!|抽奖永不停止|棒棒哒|老板大气，参与抽奖！|真心不错啊|来了|冲|真不错
